--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 	<link href='https://fonts.googleapis.com/css?family=Oleo+Script' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
-	<script type="text/javascript" src="assest/javascript/app.js"></script>
+	<link rel="stylesheet" type="text/css" href="assets/digital-7.ttf">
+	<script type="text/javascript" src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
+	<script type="text/javascript" src="assets/javascript/app.js"></script>
 </head>
 <body>
 	<header>
