--- a/index.html
+++ b/index.html
@@ -22,78 +22,78 @@
 				<ol class="questions">
 					<li>Who is original creator of JavaScript?</li>
 					<!-- Brendan Eich -->
-					    <span class="answers">
+					    <span class="testQuestions">
 						  <input type="radio" name="creator" value="Steve Jobs" class="answers" > Steve Jobs &nbsp;
-						  <input type="radio" name="creator" value="Brandan Eich" class="answers"> Brandan Eich &nbsp;
+						  <input type="radio" name="creator" value="Brandan Eich" class="answers cor" id="tester" onclick="test()"> Brandan Eich &nbsp;
 						  <input type="radio" name="creator" value="Bill Gates" class="answers"> Bill Gates &nbsp;
 						  <input type="radio" name="creator" value="Jesse Eisenberg" class="answers"> Jesse Eisenberg <br>
 						</span><br>
 
 					<li>What was JavaScript first offically called?</li>
 					<!-- LiveScript -->
-						<span class="answers">
-						  <input type="radio" name="name_value" value="LiveScript" class="answers"> Live Script &nbsp;
+						<span class="testQuestions">
+						  <input type="radio" name="name_value" value="LiveScript" class="answers cor"> LiveScript &nbsp;
 						  <input type="radio" name="name_value" value="ActionScript" class="answers"> ActionScript &nbsp;
 						  <input type="radio" name="name_value" value="Hypertext Preprocessor" class="answers"> Hypertext Preprocessor &nbsp;
 						  <input type="radio" name="name_value" value="C#" class="answers"> C#<br>
 						</span><br>
 					<li>What kind of language is JavaScript?</li>
 					<!-- scripting language -->
-						<span class="answers">
+						<span class="testQuestions">
 						  <input type="radio" name="language" value="A derivative of Spanish"> A derivative of Spanish &nbsp;
 						  <input type="radio" name="language" value="Machine" class="answers"> Machine Language &nbsp;
-						  <input type="radio" name="language" value="Scripting" class="answers"> Scripting &nbsp;
+						  <input type="radio" name="language" value="Scripting" class="answers cor"> Scripting language&nbsp;
 						  <input type="radio" name="language" value="MarkUp Language" class="answers"> MarkUp Language<br>
 						</span><br>
 					<li>Java and JavaScript are the exact same thing.</li>
 					<!-- false -->
-					<span class="answers">
-						  <input type="radio" name="T or F1" value="True"> True &nbsp;
-						  <input type="radio" name="T or F"1> False<br>
+					<span class="testQuestions">
+						  <input type="radio" name="T or F1" value="true"> True &nbsp;
+						  <input type="radio" name="T or F1" value="false" class="cor"> False<br>
 					</span><br>	  
 					<li>The only non-primitive data type is an Object.</li>
 					<!-- true -->
-					<span class="answers">
-						  <input type="radio" name="T or F2" value="True"> True &nbsp;
-						  <input type="radio" name="T or F2"> False<br>
+					<span class="testQuestions">
+						  <input type="radio" name="T or F2" value="true" class="cor"> True &nbsp;
+						  <input type="radio" name="T or F2" value="false"> False<br>
 					</span><br>
 					<li>What browser did JavaScript first appear?</li>
 					<!-- Netscape Navigator -->
-						<span class="answers">
+						<span class="testQuestions">
 						  <input type="radio" name="browser" value="Google Chrome"> Google Chrome &nbsp;
 						  <input type="radio" name="browser" value="Opera" class="answers"> Opera &nbsp;					
 						  <input type="radio" name="browser" value="Firefox" class="answers"> Firefox &nbsp;
-						  <input type="radio" name="browser" value="Netscape Navigator" class="answers"> Netscape Navigator<br>
+						  <input type="radio" name="browser" value="Netscape Navigator" class="answers cor"> Netscape Navigator<br>
 						</span><br>
 					<li>What company owns the trademark to JavaScript?</li>
 					<!-- Oracle -->
-						<span class="answers">
-						  <input type="radio" name="antivirus" value="Oracle"> Oracle &nbsp;
-						  <input type="radio" name="antivirus" value="Mozilla" class="answers"> Mozilla &nbsp;					
+						<span class="testQuestions">
+						  <input type="radio" name="antivirus" value="Oracle" class="answers cor" > Oracle &nbsp;
+						  <input type="radio" name="antivirus" value="Mozilla" class="answers"> Mozilla &nbsp;					 
 						  <input type="radio" name="antivirus" value="Apple" class="answers"> Apple &nbsp;
 						  <input type="radio" name="antivirus" value="McAfee Antivirus" class="answers"> McAfee Antivirus<br>
 						</span><br>
 					<li>Who is the person that developed JSON (JavaScript Object Notation)?</li>
 					<!-- Douglas Crockford -->
-						<span class="answers">
-						  <input type="radio" name="JSON" value="Douglas Crockford"> Douglas Crockford &nbsp;
+						<span class="testQuestions">
+						  <input type="radio" name="JSON" value="Douglas Crockford" class="answers cor"> Douglas Crockford &nbsp;
 						  <input type="radio" name="JSON" value="Edward Mozilla" class="answers"> Edward Mozilla &nbsp;
 						  <input type="radio" name="JSON" value="Elon Musk" class="answers"> Elon Musk &nbsp;				
 						  <input type="radio" name="JSON" value="Grace Hopper" class="answers"> Grace Hopper<br>
 						</span><br>
 					<li>Who is the JavaScript guru that created jQuery?</li>
 					<!-- John Resig -->
-						<span class="answers">
+						<span class="testQuestions">
 						  <input type="radio" name="guru" value="Mike Meyers"> Mike Meyers &nbsp;
-						  <input type="radio" name="guru" value="John Resig" class="answers"> John Resig &nbsp;
-						  <input type="radio" name="guru" value="John Carmack" class="answers"> John Carmack &nbsp;
-						  <input type="radio" name="guru" value="Steve Wazniak" class="answers"> Steve Wazniak<br>
+						  <input type="radio" name="guru" value="John Resig" class="cor"> John Resig &nbsp;
+						  <input type="radio" name="guru" value="John Carmack"> John Carmack &nbsp;
+						  <input type="radio" name="guru" value="Steve Wazniak"> Steve Wazniak<br>
 						</span><br>
 					<li>The term 'bug' came from Grace Hopper an early software engineer where an actual moth was pulled out of an early electromechanical computer.</li>
 					<!-- true -->
-					<span class="answers">
-						  <input type="radio" name="T or F3" value="True"> True &nbsp;
-						  <input type="radio" name="T or F3"> False
+					<span class="testQuestions">
+						  <input type="radio" name="T or F3" value="true" class="cor"> True &nbsp;
+						  <input type="radio" name="T or F3" value="false"> False
 					</span>
 				</ol>
 			
