experimenting with jQuery

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 					</span>
 				</ol>
 			
-				<button type="submit" name="submit" class="submit">Submit!</button>
+				<button type="submit" name="submit" class="submit" onclick="dataCapture()">Submit!</button>
 
 				</form>
 			</div>
