--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<div class="container">
 			<div class = "subcontainer">
 				<h1 id="title">Totally Unimportant JavaScript Trivia</h1>
-				<form>
+				
 				<ol class="questions">
 					<li>Who is original creator of JavaScript?</li>
 					<!-- Brendan Eich -->
@@ -96,10 +96,12 @@
 						  <input type="radio" name="T or F3" value="false"> False
 					</span>
 				</ol>
-			
-				<button type="submit" name="submit" class="submit" onclick="dataCapture()">Submit!</button>
+				<p>Name: </p>          
+				<input type="text" name="name" id="txtFirstName"/><br>
+				Your Name is: <label id="lblFirstName"></label> <br>
+				<button type="submit" name="submit" class="submit" id="submitbutton">Submit!</button>
 
-				</form>
+				
 			</div>
 		</div>
 	<footer>
