made some small changes to the styling of the site

--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
 		</div>
 	</header>
 		<div class="container">
-			<div class = "subcontainer">
-				<h1 id="title">Totally Unimportant JavaScript Trivia</h1>
+			<div class="subcontainer">
+				<header>
+					<h1 id="title">Totally Unimportant JavaScript Trivia</h1>	
+				</header>
 				
 				<ol class="questions">
-					<li>Who is original creator of JavaScript?</li>
+					<li>1. Who is original creator of JavaScript?</li>
 					<!-- Brendan Eich -->
 					    <span class="testQuestions">
 						  <input type="radio" name="creator" value="Steve Jobs" class="answers" > Steve Jobs &nbsp;
@@ -29,7 +31,7 @@
 						  <input type="radio" name="creator" value="Jesse Eisenberg" class="answers"> Jesse Eisenberg <br>
 						</span><br>
 
-					<li>What was JavaScript first offically called?</li>
+					<li>2. What was JavaScript first offically called?</li>
 					<!-- LiveScript -->
 						<span class="testQuestions">
 						  <input type="radio" name="name_value" value="LiveScript" class="answers cor"> LiveScript &nbsp;
@@ -37,7 +39,7 @@
 						  <input type="radio" name="name_value" value="Hypertext Preprocessor" class="answers"> Hypertext Preprocessor &nbsp;
 						  <input type="radio" name="name_value" value="C#" class="answers"> C#<br>
 						</span><br>
-					<li>What kind of language is JavaScript?</li>
+					<li>3. What kind of language is JavaScript?</li>
 					<!-- scripting language -->
 						<span class="testQuestions">
 						  <input type="radio" name="language" value="A derivative of Spanish"> A derivative of Spanish &nbsp;
@@ -45,19 +47,19 @@
 						  <input type="radio" name="language" value="Scripting" class="answers cor"> Scripting language&nbsp;
 						  <input type="radio" name="language" value="MarkUp Language" class="answers"> MarkUp Language<br>
 						</span><br>
-					<li>Java and JavaScript are the exact same thing.</li>
+					<li>4. Java and JavaScript are the exact same thing.</li>
 					<!-- false -->
 					<span class="testQuestions">
 						  <input type="radio" name="T or F1" value="true"> True &nbsp;
 						  <input type="radio" name="T or F1" value="false" class="cor"> False<br>
 					</span><br>	  
-					<li>The only non-primitive data type is an Object.</li>
+					<li>5. The only non-primitive data type is an Object.</li>
 					<!-- true -->
 					<span class="testQuestions">
 						  <input type="radio" name="T or F2" value="true" class="cor"> True &nbsp;
 						  <input type="radio" name="T or F2" value="false"> False<br>
 					</span><br>
-					<li>What browser did JavaScript first appear?</li>
+					<li>6. What browser did JavaScript first appear?</li>
 					<!-- Netscape Navigator -->
 						<span class="testQuestions">
 						  <input type="radio" name="browser" value="Google Chrome"> Google Chrome &nbsp;
@@ -65,7 +67,7 @@
 						  <input type="radio" name="browser" value="Firefox" class="answers"> Firefox &nbsp;
 						  <input type="radio" name="browser" value="Netscape Navigator" class="answers cor"> Netscape Navigator<br>
 						</span><br>
-					<li>What company owns the trademark to JavaScript?</li>
+					<li>7. What company owns the trademark to JavaScript?</li>
 					<!-- Oracle -->
 						<span class="testQuestions">
 						  <input type="radio" name="antivirus" value="Oracle" class="answers cor" > Oracle &nbsp;
@@ -73,7 +75,7 @@
 						  <input type="radio" name="antivirus" value="Apple" class="answers"> Apple &nbsp;
 						  <input type="radio" name="antivirus" value="McAfee Antivirus" class="answers"> McAfee Antivirus<br>
 						</span><br>
-					<li>Who is the person that developed JSON (JavaScript Object Notation)?</li>
+					<li>8. Who is the person that developed JSON (JavaScript Object Notation)?</li>
 					<!-- Douglas Crockford -->
 						<span class="testQuestions">
 						  <input type="radio" name="JSON" value="Douglas Crockford" class="answers cor"> Douglas Crockford &nbsp;
@@ -81,7 +83,7 @@
 						  <input type="radio" name="JSON" value="Elon Musk" class="answers"> Elon Musk &nbsp;				
 						  <input type="radio" name="JSON" value="Grace Hopper" class="answers"> Grace Hopper<br>
 						</span><br>
-					<li>Who is the JavaScript guru that created jQuery?</li>
+					<li>9. Who is the JavaScript guru that created jQuery?</li>
 					<!-- John Resig -->
 						<span class="testQuestions">
 						  <input type="radio" name="guru" value="Mike Meyers"> Mike Meyers &nbsp;
@@ -89,7 +91,7 @@
 						  <input type="radio" name="guru" value="John Carmack"> John Carmack &nbsp;
 						  <input type="radio" name="guru" value="Steve Wazniak"> Steve Wazniak<br>
 						</span><br>
-					<li>The term 'bug' came from Grace Hopper an early software engineer where an actual moth was pulled out of an early electromechanical computer.</li>
+					<li>10. The term 'bug' came from Grace Hopper an early software engineer where an actual moth was pulled out of an early electromechanical computer.</li>
 					<!-- true -->
 					<span class="testQuestions">
 						  <input type="radio" name="T or F3" value="true" class="cor"> True &nbsp;
