changed the structure to the test questions

--- a/index.html
+++ b/index.html
@@ -24,79 +24,149 @@
 				<ol class="questions">
 					<li>1. Who is original creator of JavaScript?</li>
 					<!-- Brendan Eich -->
-					    <span class="testQuestions">
-						  <input type="radio" name="creator" value="Steve Jobs" class="answers" > Steve Jobs &nbsp;
-						  <input type="radio" name="creator" value="Brandan Eich" class="answers cor" id="tester" onclick="test()"> Brandan Eich &nbsp;
-						  <input type="radio" name="creator" value="Bill Gates" class="answers"> Bill Gates &nbsp;
-						  <input type="radio" name="creator" value="Jesse Eisenberg" class="answers"> Jesse Eisenberg <br>
-						</span><br>
+
+					    <div class="testQuestions">
+							<div class="actual-questions">
+							  <input type="radio" name="creator" value="Steve Jobs" class="answers" > <span class="question-text">Steve Jobs</span> &nbsp;
+							</div>  
+							<div class="actual-questions">
+							  <input type="radio" name="creator" value="Brandan Eich" class="answers cor" id="tester" onclick="test()"> 
+							<span class="question-text">Brandan Eich</span> &nbsp;
+							</div> 
+							<div class="actual-questions"> 
+							  <input type="radio" name="creator" value="Bill Gates" class="answers"> <span class="question-text">Bill Gates &nbsp;</span>
+							</div> 
+							<div class="actual-questions">  
+							  <input type="radio" name="creator" value="Jesse Eisenberg" class="answers"> <span class="question-text">Jesse Eisenberg </span>
+						  	</div>
+						</div><br>
 
 					<li>2. What was JavaScript first offically called?</li>
 					<!-- LiveScript -->
-						<span class="testQuestions">
-						  <input type="radio" name="name_value" value="LiveScript" class="answers cor"> LiveScript &nbsp;
-						  <input type="radio" name="name_value" value="ActionScript" class="answers"> ActionScript &nbsp;
-						  <input type="radio" name="name_value" value="Hypertext Preprocessor" class="answers"> Hypertext Preprocessor &nbsp;
-						  <input type="radio" name="name_value" value="C#" class="answers"> C#<br>
-						</span><br>
+						<div class="testQuestions">
+							<div class="actual-questions"> 
+							  <input type="radio" name="name_value" value="LiveScript" class="answers cor"> <span class="question-text">LiveScript &nbsp;</span>
+							</div>
+							<div class="actual-questions">   
+							  <input type="radio" name="name_value" value="ActionScript" class="answers"> <span class="question-text">ActionScript &nbsp;</span>
+							</div>  
+							<div class="actual-questions"> 
+							  <input type="radio" name="name_value" value="Hypertext Preprocessor" class="answers"> <span class="question-text">Hypertext Preprocessor &nbsp;</span>
+							</div>
+							<div class="actual-questions">   
+							  <input type="radio" name="name_value" value="C#" class="answers"> <span class="question-text">C#</span>
+							</div>  
+						</div><br>
 					<li>3. What kind of language is JavaScript?</li>
 					<!-- scripting language -->
-						<span class="testQuestions">
-						  <input type="radio" name="language" value="A derivative of Spanish"> A derivative of Spanish &nbsp;
-						  <input type="radio" name="language" value="Machine" class="answers"> Machine Language &nbsp;
-						  <input type="radio" name="language" value="Scripting" class="answers cor"> Scripting language&nbsp;
-						  <input type="radio" name="language" value="MarkUp Language" class="answers"> MarkUp Language<br>
-						</span><br>
+						<div class="testQuestions">
+							<div class="actual-questions"> 
+							  <input type="radio" name="language" value="A derivative of Spanish"> <span class="question-text">A derivative of Spanish &nbsp;</span>
+							</div>
+							<div class="actual-questions">   
+							  <input type="radio" name="language" value="Machine" class="answers"> <span class="question-text">Machine Language &nbsp;</span>
+							</div>  
+							<div class="actual-questions"> 
+							  <input type="radio" name="language" value="Scripting" class="answers cor"> <span class="question-text">Scripting language&nbsp;</span>
+							</div> 
+							<div class="actual-questions">  
+							  <input type="radio" name="language" value="MarkUp Language" class="answers"> <span class="question-text">MarkUp Language</span>
+							</div>  
+						</div><br>
 					<li>4. Java and JavaScript are the exact same thing.</li>
 					<!-- false -->
-					<span class="testQuestions">
-						  <input type="radio" name="T or F1" value="true"> True &nbsp;
-						  <input type="radio" name="T or F1" value="false" class="cor"> False<br>
-					</span><br>	  
+					<div class="testQuestions">
+						<div class="actual-questions"> 
+						  <input type="radio" name="T or F1" value="true"> <span class="question-text">True &nbsp;</span>
+						</div>
+						<div class="actual-questions">   
+						  <input type="radio" name="T or F1" value="false" class="cor"> <span class="question-text">False</span>
+						</div>  
+					</div><br>	  
 					<li>5. The only non-primitive data type is an Object.</li>
 					<!-- true -->
-					<span class="testQuestions">
-						  <input type="radio" name="T or F2" value="true" class="cor"> True &nbsp;
-						  <input type="radio" name="T or F2" value="false"> False<br>
-					</span><br>
+					<div class="testQuestions">
+						<div class="actual-questions"> 
+						  <input type="radio" name="T or F2" value="true" class="cor"> <span class="question-text">True &nbsp;</span>
+						</div>  
+						<div class="actual-questions"> 
+						  <input type="radio" name="T or F2" value="false"> <span class="question-text">False</span>
+						</div>  
+					</div><br>
 					<li>6. What browser did JavaScript first appear?</li>
 					<!-- Netscape Navigator -->
-						<span class="testQuestions">
-						  <input type="radio" name="browser" value="Google Chrome"> Google Chrome &nbsp;
-						  <input type="radio" name="browser" value="Opera" class="answers"> Opera &nbsp;					
-						  <input type="radio" name="browser" value="Firefox" class="answers"> Firefox &nbsp;
-						  <input type="radio" name="browser" value="Netscape Navigator" class="answers cor"> Netscape Navigator<br>
-						</span><br>
+						<div class="testQuestions">
+							<div class="actual-questions"> 
+							  <input type="radio" name="browser" value="Google Chrome"> <span class="question-text">Google Chrome &nbsp;<span>
+							</div>
+							<div class="actual-questions">   
+							  <input type="radio" name="browser" value="Opera" class="answers"> <span class="question-text">Opera &nbsp;	</span>				
+							</div>  
+							<div class="actual-questions"> 
+							  <input type="radio" name="browser" value="Firefox" class="answers"> <span class="question-text">Firefox &nbsp;</span>
+							</div> 
+							<div class="actual-questions">  
+							  <input type="radio" name="browser" value="Netscape Navigator" class="answers cor"> <span class="question-text">Netscape Navigator</span>
+							</div>  
+						</div><br>
 					<li>7. What company owns the trademark to JavaScript?</li>
 					<!-- Oracle -->
-						<span class="testQuestions">
-						  <input type="radio" name="antivirus" value="Oracle" class="answers cor" > Oracle &nbsp;
-						  <input type="radio" name="antivirus" value="Mozilla" class="answers"> Mozilla &nbsp;					 
-						  <input type="radio" name="antivirus" value="Apple" class="answers"> Apple &nbsp;
-						  <input type="radio" name="antivirus" value="McAfee Antivirus" class="answers"> McAfee Antivirus<br>
-						</span><br>
+						<div class="testQuestions">
+							<div class="actual-questions"> 
+							  <input type="radio" name="antivirus" value="Oracle" class="answers cor" > <span class="question-text">Oracle &nbsp;</span>
+							</div>
+							<div class="actual-questions">   
+							  <input type="radio" name="antivirus" value="Mozilla" class="answers"> <span class="question-text">Mozilla &nbsp;</span>				
+							</div> 
+							<div class="actual-questions">  	 
+							  <input type="radio" name="antivirus" value="Apple" class="answers"> <span class="question-text">Apple &nbsp;</span>
+							</div> 
+							<div class="actual-questions">  
+							  <input type="radio" name="antivirus" value="McAfee Antivirus" class="answers"> <span class="question-text">McAfee Antivirus</span>
+							</div>  
+						</div><br>
 					<li>8. Who is the person that developed JSON (JavaScript Object Notation)?</li>
 					<!-- Douglas Crockford -->
-						<span class="testQuestions">
-						  <input type="radio" name="JSON" value="Douglas Crockford" class="answers cor"> Douglas Crockford &nbsp;
-						  <input type="radio" name="JSON" value="Edward Mozilla" class="answers"> Edward Mozilla &nbsp;
-						  <input type="radio" name="JSON" value="Elon Musk" class="answers"> Elon Musk &nbsp;				
-						  <input type="radio" name="JSON" value="Grace Hopper" class="answers"> Grace Hopper<br>
-						</span><br>
+						<div class="testQuestions">
+							<div class="actual-questions"> 
+							  <input type="radio" name="JSON" value="Douglas Crockford" class="answers cor"> <span class="question-text">Douglas Crockford &nbsp;</span>
+							</div>  
+							<div class="actual-questions"> 
+							  <input type="radio" name="JSON" value="Edward Mozilla" class="answers"> <span class="question-text">Edward Mozilla &nbsp;</span>
+							</div>  
+							<div class="actual-questions"> 
+							  <input type="radio" name="JSON" value="Elon Musk" class="answers"> <span class="question-text">Elon Musk &nbsp;</span>				
+							</div>
+							<div class="actual-questions">   
+							  <input type="radio" name="JSON" value="Grace Hopper" class="answers"> <span class="question-text">Grace Hopper</span>
+							</div>  
+						</div><br>
 					<li>9. Who is the JavaScript guru that created jQuery?</li>
 					<!-- John Resig -->
-						<span class="testQuestions">
-						  <input type="radio" name="guru" value="Mike Meyers"> Mike Meyers &nbsp;
-						  <input type="radio" name="guru" value="John Resig" class="cor"> John Resig &nbsp;
-						  <input type="radio" name="guru" value="John Carmack"> John Carmack &nbsp;
-						  <input type="radio" name="guru" value="Steve Wazniak"> Steve Wazniak<br>
-						</span><br>
+						<div class="testQuestions">
+							<div class="actual-questions"> 
+							  <input type="radio" name="guru" value="Mike Meyers"> <span class="question-text">Mike Meyers &nbsp;</span>
+							</div> 
+							<div class="actual-questions">  
+							  <input type="radio" name="guru" value="John Resig" class="cor"> <span class="question-text">John Resig &nbsp;</span>
+							</div>  
+							<div class="actual-questions"> 
+							  <input type="radio" name="guru" value="John Carmack"> <span class="question-text">John Carmack &nbsp;</span>
+							</div>
+							<div class="actual-questions">   
+							  <input type="radio" name="guru" value="Steve Wazniak"> <span class="question-text">Steve Wazniak</span>
+							</div>  
+						</div>
 					<li>10. The term 'bug' came from Grace Hopper an early software engineer where an actual moth was pulled out of an early electromechanical computer.</li>
 					<!-- true -->
-					<span class="testQuestions">
-						  <input type="radio" name="T or F3" value="true" class="cor"> True &nbsp;
-						  <input type="radio" name="T or F3" value="false"> False
-					</span>
+					<div class="testQuestions">
+						<div class="actual-questions"> 
+						  <input type="radio" name="T or F3" value="true" class="cor"> <span class="question-text">True &nbsp;</span>
+						</div>  
+						<div class="actual-questions"> 
+						  <input type="radio" name="T or F3" value="false"> <span class="question-text">False</span>
+						</div>  
+					</div>
 				</ol>
 				<p>Name: </p>          
 				<input type="text" name="name" id="txtFirstName"/><br>
