--- a/index.html
+++ b/index.html
@@ -27,17 +27,17 @@
 
 					    <div class="testQuestions">
 							<div class="actual-questions">
-							  <input type="radio" name="creator" value="Steve Jobs" class="answers" > <span class="question-text">Steve Jobs</span> &nbsp;
+							  <input type="radio" name="creator" value="Steve Jobs" id="q1-1" class="answers" > <label class="question-text" for="q1-1">Steve Jobs</label> &nbsp;
 							</div>  
 							<div class="actual-questions">
-							  <input type="radio" name="creator" value="Brandan Eich" class="answers cor" id="tester" onclick="test()"> 
-							<span class="question-text">Brandan Eich</span> &nbsp;
+							  <input type="radio" name="creator" value="Brandan Eich" id="q1-2" class="answers cor" id="tester" onclick="test()"> 
+							<label class="question-text" for="q1-2">Brandan Eich</label> &nbsp;
 							</div> 
 							<div class="actual-questions"> 
-							  <input type="radio" name="creator" value="Bill Gates" class="answers"> <span class="question-text">Bill Gates &nbsp;</span>
+							  <input type="radio" name="creator" value="Bill Gates" id="q1-3" class="answers"> <label class="question-text" for="q1-3">Bill Gates &nbsp;</label>
 							</div> 
 							<div class="actual-questions">  
-							  <input type="radio" name="creator" value="Jesse Eisenberg" class="answers"> <span class="question-text">Jesse Eisenberg </span>
+							  <input type="radio" name="creator" value="Jesse Eisenberg" id="q1-4" class="answers"> <label class="question-text" for="q1-4">Jesse Eisenberg </label>
 						  	</div>
 						</div><br>
 
@@ -45,126 +45,126 @@
 					<!-- LiveScript -->
 						<div class="testQuestions">
 							<div class="actual-questions"> 
-							  <input type="radio" name="name_value" value="LiveScript" class="answers cor"> <span class="question-text">LiveScript &nbsp;</span>
+							  <input type="radio" name="name_value" value="LiveScript" id="q2-1" class="answers cor"> <label class="question-text" for="q2-1">LiveScript &nbsp;</label>
 							</div>
 							<div class="actual-questions">   
-							  <input type="radio" name="name_value" value="ActionScript" class="answers"> <span class="question-text">ActionScript &nbsp;</span>
+							  <input type="radio" name="name_value" value="ActionScript" id="q2-2" class="answers"> <label class="question-text" for="q2-2">ActionScript &nbsp;</label>
 							</div>  
 							<div class="actual-questions"> 
-							  <input type="radio" name="name_value" value="Hypertext Preprocessor" class="answers"> <span class="question-text">Hypertext Preprocessor &nbsp;</span>
+							  <input type="radio" name="name_value" value="Hypertext Preprocessor" id="q2-3" class="answers"> <label class="question-text" for="q2-3">Hypertext Preprocessor &nbsp;</label>
 							</div>
 							<div class="actual-questions">   
-							  <input type="radio" name="name_value" value="C#" class="answers"> <span class="question-text">C#</span>
+							  <input type="radio" name="name_value" value="C#" id="q2-4"class="answers"> <label class="question-text" for="q2-4">C#</label>
 							</div>  
 						</div><br>
 					<li>3. What kind of language is JavaScript?</li>
 					<!-- scripting language -->
 						<div class="testQuestions">
 							<div class="actual-questions"> 
-							  <input type="radio" name="language" value="A derivative of Spanish"> <span class="question-text">A derivative of Spanish &nbsp;</span>
+							  <input type="radio" name="language" value="A derivative of Spanish" id="q3-1" class="answers"> <label for="q3-1" class="question-text">A derivative of Spanish &nbsp;</label>
 							</div>
 							<div class="actual-questions">   
-							  <input type="radio" name="language" value="Machine" class="answers"> <span class="question-text">Machine Language &nbsp;</span>
+							  <input type="radio" name="language" value="Machine" id="q3-2"class="answers"> <label for="q3-2" class="question-text">Machine Language &nbsp;</label>
 							</div>  
 							<div class="actual-questions"> 
-							  <input type="radio" name="language" value="Scripting" class="answers cor"> <span class="question-text">Scripting language&nbsp;</span>
+							  <input type="radio" name="language" value="Scripting" id="q3-3" class="answers cor"> <label for="q3-3" class="question-text">Scripting language&nbsp;</label>
 							</div> 
 							<div class="actual-questions">  
-							  <input type="radio" name="language" value="MarkUp Language" class="answers"> <span class="question-text">MarkUp Language</span>
+							  <input type="radio" name="language" value="MarkUp Language" id="q3-4" class="answers"> <label for="q3-4" class="question-text">MarkUp Language</label>
 							</div>  
 						</div><br>
 					<li>4. Java and JavaScript are the exact same thing.</li>
 					<!-- false -->
 					<div class="testQuestions">
 						<div class="actual-questions"> 
-						  <input type="radio" name="T or F1" value="true"> <span class="question-text">True &nbsp;</span>
+						  <input type="radio" name="T or F1" value="true" id="q4-1" class="answers"> <label for="q4-1" class="question-text">True &nbsp;</label>
 						</div>
 						<div class="actual-questions">   
-						  <input type="radio" name="T or F1" value="false" class="cor"> <span class="question-text">False</span>
+						  <input type="radio" name="T or F1" value="false" id="q4-2" class="cor answers"> <label for="q4-2" class="question-text">False</label>
 						</div>  
 					</div><br>	  
 					<li>5. The only non-primitive data type is an Object.</li>
 					<!-- true -->
 					<div class="testQuestions">
 						<div class="actual-questions"> 
-						  <input type="radio" name="T or F2" value="true" class="cor"> <span class="question-text">True &nbsp;</span>
+						  <input type="radio" name="T or F2" value="true" id="q5-1" class="cor answers"> <label for="q5-1" class="question-text">True &nbsp;</label>
 						</div>  
 						<div class="actual-questions"> 
-						  <input type="radio" name="T or F2" value="false"> <span class="question-text">False</span>
+						  <input type="radio" name="T or F2" value="false" id="q5-2" class="answers"> <label for="q5-2" class="question-text">False</label
 						</div>  
 					</div><br>
 					<li>6. What browser did JavaScript first appear?</li>
 					<!-- Netscape Navigator -->
 						<div class="testQuestions">
 							<div class="actual-questions"> 
-							  <input type="radio" name="browser" value="Google Chrome"> <span class="question-text">Google Chrome &nbsp;<span>
+							  <input type="radio" name="browser" value="Google Chrome" id="q6-1" class="answers"> <label for="q6-1" class="question-text">Google Chrome &nbsp;<label>
 							</div>
 							<div class="actual-questions">   
-							  <input type="radio" name="browser" value="Opera" class="answers"> <span class="question-text">Opera &nbsp;	</span>				
+							  <input type="radio" name="browser" value="Opera" id="q6-2"class="answers"> <label for="q6-2" class="question-text">Opera &nbsp;	</label>				
 							</div>  
 							<div class="actual-questions"> 
-							  <input type="radio" name="browser" value="Firefox" class="answers"> <span class="question-text">Firefox &nbsp;</span>
+							  <input type="radio" name="browser" value="Firefox" id="q6-3" class="answers"> <label for="q6-3" class="question-text">Firefox &nbsp;</label>
 							</div> 
 							<div class="actual-questions">  
-							  <input type="radio" name="browser" value="Netscape Navigator" class="answers cor"> <span class="question-text">Netscape Navigator</span>
-							</div>  
+							  <input type="radio" name="browser" value="Netscape Navigator" id="q6-4" class="answers cor"> <label for="q6-4" class="question-text">Netscape Navigator</label>
+							</div>   
 						</div><br>
 					<li>7. What company owns the trademark to JavaScript?</li>
 					<!-- Oracle -->
 						<div class="testQuestions">
 							<div class="actual-questions"> 
-							  <input type="radio" name="antivirus" value="Oracle" class="answers cor" > <span class="question-text">Oracle &nbsp;</span>
+							  <input type="radio" name="antivirus" value="Oracle" id="q7-1" class="answers cor" > <label for="q7-1" class="question-text">Oracle &nbsp;</label>
 							</div>
 							<div class="actual-questions">   
-							  <input type="radio" name="antivirus" value="Mozilla" class="answers"> <span class="question-text">Mozilla &nbsp;</span>				
+							  <input type="radio" name="antivirus" value="Mozilla" id="q7-2" class="answers"> <label for="q7-2" class="question-text">Mozilla &nbsp;</label>				
 							</div> 
 							<div class="actual-questions">  	 
-							  <input type="radio" name="antivirus" value="Apple" class="answers"> <span class="question-text">Apple &nbsp;</span>
+							  <input type="radio" name="antivirus" value="Apple" id="q7-3" class="answers"> <label for="q7-3" class="question-text">Apple &nbsp;</label>
 							</div> 
 							<div class="actual-questions">  
-							  <input type="radio" name="antivirus" value="McAfee Antivirus" class="answers"> <span class="question-text">McAfee Antivirus</span>
+							  <input type="radio" name="antivirus" value="McAfee Antivirus" id="q7-4" class="answers"> <label for="q7-4" class="question-text">McAfee Antivirus</label>
 							</div>  
 						</div><br>
 					<li>8. Who is the person that developed JSON (JavaScript Object Notation)?</li>
 					<!-- Douglas Crockford -->
 						<div class="testQuestions">
 							<div class="actual-questions"> 
-							  <input type="radio" name="JSON" value="Douglas Crockford" class="answers cor"> <span class="question-text">Douglas Crockford &nbsp;</span>
+							  <input type="radio" name="JSON" value="Douglas Crockford" id="q8-1" class="answers cor"> <label for="q8-1" class="question-text">Douglas Crockford &nbsp;</label>
 							</div>  
 							<div class="actual-questions"> 
-							  <input type="radio" name="JSON" value="Edward Mozilla" class="answers"> <span class="question-text">Edward Mozilla &nbsp;</span>
+							  <input type="radio" name="JSON" value="Edward Mozilla" id="q8-2" class="answers"> <label for="q8-2" class="question-text">Edward Mozilla &nbsp;</label>
 							</div>  
 							<div class="actual-questions"> 
-							  <input type="radio" name="JSON" value="Elon Musk" class="answers"> <span class="question-text">Elon Musk &nbsp;</span>				
+							  <input type="radio" name="JSON" value="Elon Musk" id="q8-3" class="answers"> <label q8-1="q8-3" class="question-text">Elon Musk &nbsp;</label>				
 							</div>
 							<div class="actual-questions">   
-							  <input type="radio" name="JSON" value="Grace Hopper" class="answers"> <span class="question-text">Grace Hopper</span>
+							  <input type="radio" name="JSON" value="Grace Hopper" id="q8-4" class="answers"> <label for="q8-4" class="question-text">Grace Hopper</label>
 							</div>  
 						</div><br>
 					<li>9. Who is the JavaScript guru that created jQuery?</li>
 					<!-- John Resig -->
 						<div class="testQuestions">
 							<div class="actual-questions"> 
-							  <input type="radio" name="guru" value="Mike Meyers"> <span class="question-text">Mike Meyers &nbsp;</span>
+							  <input type="radio" name="guru" value="Mike Meyers" id="q9-1" class="answers"> <label for="q9-1" class="question-text">Mike Meyers &nbsp;</label>
 							</div> 
 							<div class="actual-questions">  
-							  <input type="radio" name="guru" value="John Resig" class="cor"> <span class="question-text">John Resig &nbsp;</span>
+							  <input type="radio" name="guru" value="John Resig" id="q9-2" class="cor answers"> <label for="q9-2" class="question-text">John Resig &nbsp;</label>
 							</div>  
 							<div class="actual-questions"> 
-							  <input type="radio" name="guru" value="John Carmack"> <span class="question-text">John Carmack &nbsp;</span>
+							  <input type="radio" name="guru" value="John Carmack" id="q9-3" class="answers"> <label for="q9-3" class="question-text">John Carmack &nbsp;</label>
 							</div>
 							<div class="actual-questions">   
-							  <input type="radio" name="guru" value="Steve Wazniak"> <span class="question-text">Steve Wazniak</span>
+							  <input type="radio" name="guru" value="Steve Wazniak" id="q9-4" class="answers"> <label for="q9-4" class="question-text">Steve Wazniak</label>
 							</div>  
 						</div>
 					<li>10. The term 'bug' came from Grace Hopper an early software engineer where an actual moth was pulled out of an early electromechanical computer.</li>
 					<!-- true -->
 					<div class="testQuestions">
 						<div class="actual-questions"> 
-						  <input type="radio" name="T or F3" value="true" class="cor"> <span class="question-text">True &nbsp;</span>
+						  <input type="radio" name="T or F3" value="true" id="q10-1" class="cor answers"> <label for="q10-1" class="question-text">True &nbsp;</label>
 						</div>  
 						<div class="actual-questions"> 
-						  <input type="radio" name="T or F3" value="false"> <span class="question-text">False</span>
+						  <input type="radio" name="T or F3" value="false" id="q10-2" class="answers"> <label for="q10-2" class="question-text">False</label>
 						</div>  
 					</div>
 				</ol>
