debugged onload modal

--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 	<link rel="stylesheet" type="text/css" href="assets/digital-7.ttf">
 	<script type="text/javascript" src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
+	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="assets/javascript/app.js"></script>
 </head>
 <body>
 	<!-- New Modal-->
-		<div class="modal hide fade" id="myModal">
+		<!-- <div class="modal hide fade" id="myModal">
 		  <div class="modal-header">
 		    <a class="close" data-dismiss="modal">×</a>
 		    <h3>JavaScript Quiz</h3>
@@ -24,7 +25,7 @@
 		    <a href="#" class="btn">Close</a>
 		    <a href="#" class="btn btn-primary">Yup</a>
 		  </div>
-		</div>
+		</div> -->
 		<!-- End New Modal -->
 	<header>
 		<div id="timer">
@@ -35,7 +36,7 @@
 		</button> -->
 
 		<!-- Modal -->
-		<!-- <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+		<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
 		  <div class="modal-dialog" role="document">
 		    <div class="modal-content">
 		      <div class="modal-header">
@@ -51,7 +52,7 @@
 		      </div>
 		    </div>
 		  </div>
-		</div> -->
+		</div>
 		<!-- End Modal -->
 
 	</header>
